--- a/code/chap01.ipynb
+++ b/code/chap01.ipynb
@@ -6,22 +6,22 @@
    "source": [
     "## ThinkDSP\n",
     "\n",
-    "This notebook contains code examples from Chapter 1: Sounds and Signals\n",
+    "Эта записная книжка содержит примеры кода из главы 1: Звуки и сигналы",
     "\n",
-    "Copyright 2015 Allen Downey\n",
+    "Авторское право 2015 Аллен Дауни\n",
     "\n",
-    "License: [Creative Commons Attribution 4.0 International](http://creativecommons.org/licenses/by/4.0/)\n"
+    "Лицензия: [Creative Commons Attribution 4.0 International](http://creativecommons.org/licenses/by/4.0/)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Think DSP module\n",
+    "## Подумайте о модуле DSP\n",
     "\n",
-    "`thinkdsp` is a module that accompanies _Think DSP_ and provides classes and functions for working with signals.\n",
+    "`thinkdsp` - это модуль, который сопровождает _Think DSP_ и предоставляет классы и функции для работы с сигналами.\n",
     "\n",
-    "[Documentation of the thinkdsp module is here](http://greenteapress.com/thinkdsp.html). "
+    "[Документация модуля thinkdsp находится здесь](http://greenteapress.com/thinkdsp.html). "
    ]
   },
   {
@@ -42,9 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Signals\n",
+    "## Сигналы\n",
     "\n",
-    "Instantiate cosine and sine signals."
+    "Создайте экземпляры сигналов косинуса и синуса."
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the sine and cosine signals.  By default, `plot` plots three periods.  "
+    "Постройте сигналы синуса и косинуса.  По умолчанию `plot` отображает три периода.  "
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's the sine signal."
+    "Вот синусоидальный сигнал."
    ]
   },
   {
@@ -123,9 +123,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the frequency of the sine signal is doubled, so the period is halved.\n",
+    "Обратите внимание, что частота синусоидального сигнала удваивается, поэтому период уменьшается вдвое.\n",
     "\n",
-    "The sum of two signals is a SumSignal."
+    "Сумма двух сигналов называется SumSignal."
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's what it looks like."
+    "Вот как это выглядит."
    ]
   },
   {
@@ -183,9 +183,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Waves\n",
+    "## Волны\n",
     "\n",
-    "A Signal represents a mathematical function defined for all values of time.  If you evaluate a signal at a sequence of equally-spaced times, the result is a Wave.  `framerate` is the number of samples per second."
+    "Сигнал представляет собой математическую функцию, определенную для всех значений времени.  Если вы оцениваете сигнал с равными интервалами времени, результатом является волна.  `частота кадров` - это количество выборок в секунду."
    ]
   },
   {
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IPython provides an Audio widget that can play a wave."
+    "IPython предоставляет звуковой виджет, который может воспроизводить волну."
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wave also provides `make_audio()`, which does the same thing:"
+    "Wave также предоставляет `make_audio ()`, который делает то же самое:"
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `ys` attribute is a NumPy array that contains the values from the signal.  The interval between samples is the inverse of the framerate."
+    "Атрибут `ys` представляет собой числовой массив, содержащий значения из сигнала.  Интервал между выборками обратно пропорционален частоте кадров."
    ]
   },
   {
@@ -297,8 +297,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of samples 5512\n",
-      "Timestep in ms 0.09070294784580499\n"
+      "Количество образцов 5512\n",
+      "Временной интервал в мс 0,09070294784580499\n"
      ]
     }
    ],
@@ -311,9 +311,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Signal objects that represent periodic signals have a `period` attribute.\n",
+    "Объекты Signal, представляющие периодические сигналы, имеют атрибут `period`.\n",
     "\n",
-    "Wave provides `segment`, which creates a new wave.  So we can pull out a 3 period segment of this wave."
+    "Волна обеспечивает `сегмент`, который создает новую волну.  Таким образом, мы можем выделить 3-периодный сегмент этой волны."
    ]
   },
   {
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wave provides `plot`"
+    "График " Wave provides "`"
    ]
   },
   {
@@ -370,9 +370,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`normalize` scales a wave so the range doesn't exceed -1 to 1.\n",
+    "`normalize` масштабирует волну таким образом, чтобы диапазон не превышал от -1 до 1.\n",
     "\n",
-    "`apodize` tapers the beginning and end of the wave so it doesn't click when you play it."
+    "`apodize` сужает начало и конец волны, чтобы она не щелкала при воспроизведении."
    ]
   },
   {
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can write a wave to a WAV file."
+    "Вы можете записать wave в WAV-файл."
    ]
   },
   {
@@ -414,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing temp.wav\n"
+      "Пишу temp.wav\n"
      ]
     }
    ],
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`wave.write` writes the wave to a file so it can be used by an exernal player."
+    "`wave.write` записывает wave в файл, чтобы его мог использовать внешний проигрыватель."
    ]
   },
   {
@@ -438,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Playing WAVE 'temp.wav' : Signed 16 bit Little Endian, Rate 11025 Hz, Mono\n"
+      "Воспроизводимая ВОЛНА "temp.wav": 16-битный знак с маленьким конечным порядком, частота 11025 Гц, моно\n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`read_wave` reads WAV files.  The WAV examples in the book are from freesound.org.  In the contributors section of the book, I list and thank the people who uploaded the sounds I use."
+    "`read_wave` считывает файлы формата WAV.  Примеры формата WAV в книге взяты из freesound.org.  В разделе "Авторы" книги я перечисляю и благодарю людей, которые загрузили звуки, которые я использую."
    ]
   },
   {
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I pulled out a segment of this recording where the pitch is constant.  When we plot the segment, we can't see the waveform clearly, but we can see the \"envelope\", which tracks the change in amplitude during the segment."
+    "Я извлек фрагмент этой записи, где высота звука постоянна.  Когда мы строим сегмент, мы не можем четко видеть форму сигнала, но мы можем видеть "огибающую", которая отслеживает изменение амплитуды в течение сегмента."
    ]
   },
   {
@@ -541,9 +541,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spectrums\n",
+    "## Спектры\n",
     "\n",
-    "Wave provides `make_spectrum`, which computes the spectrum of the wave."
+    "Wave предоставляет `make_spectrum`, который вычисляет спектр волны."
    ]
   },
   {
@@ -552,14 +552,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectrum = segment.make_spectrum()"
+    "спектр = сегмент.make_spectrum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spectrum provides `plot`"
+    "Спектр обеспечивает `график`"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The frequency components above 10 kHz are small.  We can see the lower frequencies more clearly by providing an upper bound:"
+    "Частотные составляющие выше 10 кГц невелики.  Мы можем более четко видеть более низкие частоты, указав верхнюю границу:"
    ]
   },
   {
@@ -615,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spectrum provides `low_pass`, which applies a low pass filter; that is, it attenuates all frequency components above a cutoff frequency."
+    "Spectrum предоставляет `low_pass`, который применяет фильтр нижних частот; то есть он ослабляет все частотные составляющие выше частоты среза."
    ]
   },
   {
@@ -631,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result is a spectrum with fewer components."
+    "В результате получается спектр с меньшим количеством компонентов."
    ]
   },
   {
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can convert the filtered spectrum back to a wave:"
+    "Мы можем преобразовать отфильтрованный спектр обратно в волну:"
    ]
   },
   {
@@ -675,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And then normalize it to the range -1 to 1."
+    "А затем нормализуйте его в диапазоне от -1 до 1."
    ]
   },
   {
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before playing it back, I'll apodize it (to avoid clicks)."
+    "Прежде чем воспроизвести его, я отредактирую его (чтобы избежать щелчков)."
    ]
   },
   {
@@ -720,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And I'll do the same with the original segment."
+    "И я сделаю то же самое с исходным сегментом."
    ]
   },
   {
@@ -750,7 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can listen to the original segment and the filtered version."
+    "Наконец, мы можем прослушать исходный сегмент и отфильтрованную версию."
    ]
   },
   {
@@ -813,17 +813,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The original sounds more complex, with some high-frequency components that sound buzzy.\n",
-    "The filtered version sounds more like a pure tone, with a more muffled quality.  The cutoff frequency I chose, 3000 Hz, is similar to the quality of a telephone line, so this example simulates the sound of a violin recording played over a telephone."
+    "Оригинал звучит более сложно, с некоторыми высокочастотными компонентами, которые звучат шумно.\n",
+    "Отфильтрованная версия звучит больше как чистый звук, с более приглушенным качеством.  Выбранная мной частота среза, 3000 Гц, аналогична качеству телефонной линии, поэтому в этом примере имитируется звучание записи скрипки, воспроизводимой по телефону."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interaction\n",
+    "## Взаимодействие\n",
     "\n",
-    "The following example shows how to use interactive IPython widgets."
+    "В следующем примере показано, как использовать интерактивные виджеты IPython."
    ]
   },
   {
@@ -862,7 +862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adjust the sliders to control the start and duration of the segment and the cutoff frequency applied to the spectrum."
+    "Отрегулируйте ползунки, чтобы управлять началом и длительностью сегмента, а также частотой среза, применяемой к спектру."
    ]
   },
   {
